--- a/Project.html
+++ b/Project.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -141,7 +141,7 @@ print(result)</code></pre>
 ## Detection Rate         0.2843   0.1923   0.1723   0.1617   0.1829
 ## Detection Prevalence   0.2851   0.1937   0.1748   0.1633   0.1831
 ## Balanced Accuracy      0.9991   0.9960   0.9927   0.9922   0.9977</code></pre>
-<p>As we expected the classification model achieved a very high accuracy rate of 99.35%, so our estimate of the out of sample error is 0.65% with 0.45, 0.92% confidence interval.</p>
+<p>The model was expecting an accuracy rate of 99.29%, with an estimated out of sample error of 0.71%. Predicting the testing subset the model achieved an accuracy rate of 99.35%, the out of sample error is 0.65% with 0.45, 0.92% confidence interval. The estimate of the out of sample error was fairly in line with the actual value from the prediction.</p>
 </div>
 <div id="model-prediction" class="section level3">
 <h3>3. Model prediction</h3>
